Be a little more conservative about dirtying function-based content lists when a node's attribute changes and they match it (check whether the node is already in the list first).  Bug 271709, r+sr=jst